--- a/Final Documentation/Evaluation/Evaluation.tex
+++ b/Final Documentation/Evaluation/Evaluation.tex
@@ -224,8 +224,7 @@ This might be problematic as the difficulty of the test questions might not be e
 \emph{Is the cause and effect relationship I have shown valid in other situations?}
 
 \medskip
-\noindent Our results are only valid for the choice of control variables.
-This can be problematic as, for example, my test questions might not actually be suitable for checking if my learning goals have been reached.
+\noindent My results are only valid for the choice of control variables. As the questions and the scenarios correspond to the bx concepts (learning goals) which I wanted to teach, hence the results are specific to the bx concepts (learning goals) only. Similarly, the results can be generalized only for the master students, but not for all types of participants, e.g., PhD students, researchers, etc. as different group might comprehend the bx concepts in a different way. However, the results might be valid for another example as well, if the similar scenarios can be created with that example to teach the corresponding bx concepts.
 
 \emph{Does the treatment/change I introduced have a statistically significant effect on the outcome I measure?}
 
