Alignment of pages

--- a/Final Documentation/Design/Design.tex
+++ b/Final Documentation/Design/Design.tex
@@ -75,7 +75,7 @@ Next step in the design process was the selection of a bx tool which takes care 
 My gathered information during the case study phase led the foundation for the selection process. I further investigated on the existing bx tools from the point of view of practical application and usage of these tools in terms of building software. Even after a significant amount of work has been done by the developers community and bx community, the main problems were revolving around the conceptual, practical challenges associated with using bx, and tool/technology in building software systems and absence of benchmarks for comparison of complete bx solutions~\cite{bx-theoryandappl}.
 To focus particularly on these issues, bx-community had conducted a series of technical workshops at relevant conferences and organized week-long intensive research seminars~\cite{bx-theoryandappl}. Some main outcomes of these seminars were (i) focus on the need of benchmarks and further categorizing them into functional and non-functional ones, (ii) software tool support for bx was shown in terms of demos which includes tools like eMoflon, Echo etc.
 
-The outcome of the seminars led me to concentrate and analyze bx tools like eMoflon, Echo, BIGUL. Also, I came across the benchmark \cite{benchmarx} \cite{benchmarx-reload}, the first non-trivial benchmark where Anjorin et al. provide a practical framework to compare and evaluate three bx tools. After analyzing these tools, benchmarks and taking into consideration the research questions and requirements, I have finally chosen \textit{eMoflon} as the bx tool to handle the bx part of the demonstrator. Following were the driving factors for the selection of the bx tool:
+The outcome of the seminars led me to concentrate and analyze bx tools like eMoflon, Echo, BIGUL. Also, I came across the benchmark~\cite{benchmarx}\cite{benchmarx-reload}, the first non-trivial benchmark where Anjorin et al. provide a practical framework to compare and evaluate three bx tools. After analyzing these tools, benchmarks and taking into consideration the research questions and requirements, I have finally chosen \textit{eMoflon} as the bx tool to handle the bx part of the demonstrator. Following were the driving factors for the selection of the bx tool:
 \begin{itemize}
 	\item {Anjorin et al. \cite{benchmarx-reload} tried to solve the main problem with benchmarking bx tools by creating a common design space, in which different bx tools architecture can be accommodated irrespective of the fact that they can have different input data. Hence, sample implementation with a fairly generic framework to implement the eMoflon tool was already available.}
 	\item {my supervisor/prof. is a core member of the eMoflon developer team which gave me the added advantage of having good support. This extra knowledge actually helped me in solving the implementation issues/challenges related to the tool.}
@@ -88,9 +88,9 @@ The last step in the design process was application architecture design which is
 
 I decided to build a web application to address the requirements \textit{NR1} (minimal installation effort), \textit{NR6} (public access), \textit{NR7} (robust), and \textit{NR8} (minimal requirements on the user's environment) described in Section \ref{subsec:nonfunctionalreq}.
 
-Web application development has evolved from a single page design to very complex layering structures since the beginning of World Wide Web. Many design patterns \cite{designpattern} \cite{designpattern-notes} consisting of different technologies and programming languages were proposed, adopted and implemented to address the demands of customers and users on the web. With the rapid changes occurring on World Wide Web, some technologies are becoming obsolete and losing demand. Nowadays, the main trend appears to be improving user interaction and allowing developers to build powerful web applications rapidly.
+Web application development has evolved from a single page design to very complex layering structures since the beginning of World Wide Web. Many design patterns~\cite{designpattern}\cite{designpattern-notes} consisting of different technologies and programming languages were proposed, adopted and implemented to address the demands of customers and users on the web. With the rapid changes occurring on World Wide Web, some technologies are becoming obsolete and losing demand. Nowadays, the main trend appears to be improving user interaction and allowing developers to build powerful web applications rapidly.
 
-I analyzed some design patterns and commonly used architecture designs by working on a few Proof of Concepts (PoC). The main goal of my thesis is to design and implement a demonstrator based on a bx-tool as described in Section \ref{subsec:contribution} and prior to this stage, I have already selected \textit{eMoflon} as my bx-tool in Section \ref{subsec:bxtoolselection}. The main idea was thus to check the feasibility of the architecture and the data flow within its components on top of the interface provided by the \textit{Benchmarx} framework (proposed by Anjorin et al. \cite{benchmarx-reload}) to access the bx-tool. While working on the PoCs, I encountered a few problems such as maintainability and reusability of code, dependencies of components etc. To avoid these problems and to address the requirements \textit{NR7} (robust) and \textit{NR10} (extendable) described in Section \ref{subsec:nonfunctionalreq}, I finally chose one variant of the Model-View-Controller (referred as \textbf{MVC} from now on) architecture for my application framework. Following were the driving factors for the selection of the MVC architecture \cite{designpattern-notes} \cite{designpattern-headfirst}:
+I analyzed some design patterns and commonly used architecture designs by working on a few Proof of Concepts (PoC). The main goal of my thesis is to design and implement a demonstrator based on a bx-tool as described in Section \ref{subsec:contribution} and prior to this stage, I have already selected \textit{eMoflon} as my bx-tool in Section \ref{subsec:bxtoolselection}. The main idea was thus to check the feasibility of the architecture and the data flow within its components on top of the interface provided by the \textit{Benchmarx} framework (proposed by Anjorin et al. \cite{benchmarx-reload}) to access the bx-tool. While working on the PoCs, I encountered a few problems such as maintainability and reusability of code, dependencies of components etc. To avoid these problems and to address the requirements \textit{NR7} (robust) and \textit{NR10} (extendable) described in Section \ref{subsec:nonfunctionalreq}, I finally chose one variant of the Model-View-Controller (referred as \textbf{MVC} from now on) architecture for my application framework. Following were the driving factors for the selection of the MVC architecture~\cite{designpattern-notes}\cite{designpattern-headfirst}:
 \begin{itemize}
 	\item {it differentiates the layers of a model, view, and controller for the re-usability and easy maintenance of code.}
 	\item {it splits responsibilities into three main roles which allow developers to work independently without interfering in each other's work and for more efficient collaboration.}
@@ -152,7 +152,7 @@ The sequence diagrams shown in Figure~\ref{fig:Sequence_Diagram-HighLevel(init)}
 For better understanding and to avoid complexity, here I have described the delta propagation process for only a single delta. However, the user can generate multiple deltas as well. In that case, view collects all the deltas and sends them to the controller. After receiving the deltas, the controller handles them atomically (one by one).
 
 \subsubsection{Model}\label{subsubsec:design_model}
-The model is mainly responsible for encapsulating the access of data and handling the business logic of the application \cite{designpattern-headfirst} \cite{mvc-arch}. It ensures the data abstraction and provides methods to access it, due to which the complexity of writing the code on the developers' part is highly reduced \cite{mdd-webwithmvc}.
+The model is mainly responsible for encapsulating the access of data and handling the business logic of the application~\cite{designpattern-headfirst}\cite{mvc-arch}. It ensures the data abstraction and provides methods to access it, due to which the complexity of writing the code on the developers' part is highly reduced~\cite{mdd-webwithmvc}.
 
 \begin{figure}
 	\centering
@@ -207,7 +207,7 @@ The sequence diagrams shown in Figure~\ref{fig:Sequence_Diagram-Model(init)}, Fi
 For better understanding and to avoid complexity, here I have described the delta propagation process for only a single delta. However, the user can generate multiple deltas as well. In that case, after receiving all the deltas from the view, the controller converts them to example specific data. Then, the controller handles them atomically (one by one). Hence, the above described delta propagation process (with or without continuation) is executed for each delta until the data processing is complete by the bx tool. 
 
 \subsubsection{View}\label{subsubsec:design_view}
-The view handles the graphical user interface part of the application. Hence, it contains all the graphic elements and all other HTML elements of the application. The view separates the design of the application from the logic of the application due to which the front end designer and the back end developer can work separately without thinking about the errors which could have shown up in the case of an overlapping \cite{designpattern-headfirst} \cite{mvc-arch}. The view controls how the data is being displayed, how the user interacts with it and provides ways for gathering the data from the users.
+The view handles the graphical user interface part of the application. Hence, it contains all the graphic elements and all other HTML elements of the application. The view separates the design of the application from the logic of the application due to which the front end designer and the back end developer can work separately without thinking about the errors which could have shown up in the case of an overlapping~\cite{designpattern-headfirst}\cite{mvc-arch}. The view controls how the data is being displayed, how the user interacts with it and provides ways for gathering the data from the users.
 
 \begin{figure}[h]
 	\includegraphics[width=1\textwidth]{figures/Component_Diagram-View}
