--- a/Final Documentation/Design/Design.tex
+++ b/Final Documentation/Design/Design.tex
@@ -196,12 +196,12 @@ Figure~\ref{fig:Grid_MetaModel} describes the structure of the \texttt{GridLangu
 \paragraph{Workflow}
 The sequence diagrams shown in Figure~\ref{fig:Sequence_Diagram-Model(init)}, Figure~\ref{fig:Sequence_Diagram-Model(cont-false)}, and Figure~\ref{fig:Sequence_Diagram-Model(cont-true)} illustrate the workflow of the demon-bx tool from the point of view of the model component in different stages. As the model component only communicates with the controller, these sequence diagrams show the communication process between the controller and the sub-components of the model, \texttt{BX Tool Wrapper} and the bx tool i.e., \texttt{eMoflon}.
 \begin{enumerate}
-	\item {\textbf{Load}: During first time load of the application, the controller instantiates all the wrapper classes and calls the appropriate method (\texttt{initiateSynchronisationDialogue()}) to initialize the bx tool after receiving the initialization command from the view. After receiving the request, bx tool wrapper class sends the initialization signal (\texttt{setSrc(), integrateForward()}) to the bx tool, i.e., eMoflon and the tool gets initialized by creating the instances of the \texttt{Source} and \texttt{Target} models. Then, the controller requests (\texttt{getSourceModel(), getTargetModel()}) for the newly generated models through the bx tool wrapper class. The wrapper class requests (\texttt{getSrc(), getTrg()}) for the models from the bx tool, receives it, and send it back to the controller. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Model(init)}.}
+	\item {\textbf{Load}: During first time load of the application, the controller instantiates all the wrapper classes and calls the appropriate method (\texttt{initiateSynchronisationDialogue()}) to initialize the bx tool after receiving the initialization command from the view. After receiving the request, bx tool wrapper class sends the initialization signal (\texttt{setSrc(), integrateForward()}) to the bx tool, i.e., eMoflon and the tool gets initialized by creating the instances of the \texttt{Source} and \texttt{Target} models. Then, the controller requests (\texttt{getSourceModel(), getTargetModel()}) for the newly generated models through the bx tool wrapper class. The wrapper class requests (\texttt{getSrc(), getTrg()}) for the models from the bx tool, receives it, and sends it back to the controller. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Model(init)}.}
 	
 	\item {\textbf{Delta Propagation (without continuation)}: After converting the delta sent from the view into example specific data, the controller calls the appropriate method (\texttt{performAnd PropagateTargetEdit(SrcData)}) of the wrapper class, e.g., propagate delta into source model. Accordingly, the wrapper class initiate forward synchronization 
-	(\texttt{setChange Src(SrcData), integrateForward()}) and sends the delta to the bx tool i.e., eMoflon. Here I have described only the forward synchronization. However, the process for the backward synchronization goes analogously. The bx tool processes the delta taking into account all the associated transformation rules. During processing of the data, the controller checks if satisfiability of more than one transformation rule exists (\texttt{hasContinuation()}) for the processed data i.e., continuation. If continuation does not exist, processing is completed and the controller requests (\texttt{getSourceModel(), getTargetModel()}) for the updated models through the bx tool wrapper class. The wrapper class requests (\texttt{getSrc(), getTrg()}) for the models from the bx tool, receives it, and send it back to the controller. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Model(cont-false)}.}
+	(\texttt{setChange Src(SrcData), integrateForward()}) and sends the delta to the bx tool i.e., eMoflon. Here I have described only the forward synchronization. However, the process for the backward synchronization goes analogously. The bx tool processes the delta taking into account all the associated transformation rules. During processing of the data, the controller checks if satisfiability of more than one transformation rule exists (\texttt{hasContinuation()}) for the processed data i.e., continuation. If continuation does not exist, processing is completed and the controller requests (\texttt{getSourceModel(), getTargetModel()}) for the updated models through the bx tool wrapper class. The wrapper class requests (\texttt{getSrc(), getTrg()}) for the models from the bx tool, receives it, and sends it back to the controller. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Model(cont-false)}.}
 	
-	\item {\textbf{Delta Propagation (with continuation)}: While the bx tool, i.e., eMoflon processes the delta, the controller checks if satisfiability of more than one transformation rule exists (\texttt{hasContinuation()}) for the processed data i.e., continuation. If continuation exists, the controller requests (\texttt{getChoices()}) for the matching rules from the bx tool, i.e., eMoflon through the bx tool wrapper class. The wrapper class requests, receives the matching rules from the bx tool, and send it back to the controller. On receiving the user's decision, the controller sends resume data processing signal (\texttt{continueSynchronisation(userChoice)}) along with the user's decision to the bx tool through the wrapper class. Afterward, the bx tool completes the data processing with the user's decision. Then, the controller requests (\texttt{getSourceModel(), getTargetModel()}) for the updated models through the bx tool wrapper class. The wrapper class requests (\texttt{getSrc(), getTrg()}) for the tool specific models from the bx tool, receives it, and send it back to the controller. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Model(cont-true)}.}
+	\item {\textbf{Delta Propagation (with continuation)}: While the bx tool, i.e., eMoflon processes the delta, the controller checks if satisfiability of more than one transformation rule exists (\texttt{hasContinuation()}) for the processed data i.e., continuation. If continuation exists, the controller requests (\texttt{getChoices()}) for the matching rules from the bx tool, i.e., eMoflon through the bx tool wrapper class. The wrapper class requests, receives the matching rules from the bx tool, and send it back to the controller. On receiving the user's decision, the controller sends resume data processing signal (\texttt{continueSynchronisation(userChoice)}) along with the user's decision to the bx tool through the wrapper class. Afterward, the bx tool completes the data processing with the user's decision. Then, the controller requests (\texttt{getSourceModel(), getTargetModel()}) for the updated models through the bx tool wrapper class. The wrapper class requests (\texttt{getSrc(), getTrg()}) for the tool specific models from the bx tool, receives it, and sends it back to the controller. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Model(cont-true)}.}
 \end{enumerate}
 
 For better understanding and to avoid complexity, here I have described the delta propagation process for only a single delta. However, the user can generate multiple deltas as well. In that case, after receiving all the deltas from the view, the controller converts them to example specific data. Then, the controller handles them atomically (one by one). Hence, the above described delta propagation process (with or without continuation) is executed for each delta until the data processing is complete by the bx tool. 
@@ -343,11 +343,11 @@ and Figure~\ref{fig:Sequence_Diagram-Controller(cont-true)} illustrate the workf
 
 \begin{enumerate}
 	\item {\textbf{Load}: During first time load of the application, the servlet receives an initialization command (\texttt{init(GUID)}) from the view along with the newly generated GUID for the user in the form of \texttt{JSON} data wrapped inside an \texttt{Ajax} call. After receiving the request, the servlet creates a new instance of the adapter and stores the GUID. Then, the servlet forwards the initialization request (\texttt{initeMoflonTool()}) to the adapter. The adapter instantiates the bx tool, i.e., eMoflon tool (\texttt{initiateSynchronisationDialogue()}) and the tool gets initialized by creating the instances of the \texttt{Source} and \texttt{Target} models. Afterward, servlet requests 
-	(\texttt{getUImodels()}) for the newly generated models through the adapter. The adapter requests (\texttt{getSourceModel(), getTargetModel()}) for the example specific models from the model, receives it, converts it to the UI specific data, and send it back to the servlet. After receiving the response, the servlet forwards it to the view for visualization. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Controller(init)}.}
+	(\texttt{getUImodels()}) for the newly generated models through the adapter. The adapter requests (\texttt{getSourceModel(), getTargetModel()}) for the example specific models from the model, receives it, converts it to the UI specific data, and sends it back to the servlet. After receiving the response, the servlet forwards it to the view for visualization. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Controller(init)}.}
 		
-	\item {\textbf{Delta Propagation (without continuation)}: After the synchronization button is pressed, view sends (\texttt{propagateChanges(GUID, delta)}) the delta created along with the GUID generated earlier for the user in the form of \texttt{JSON} data to the servlet wrapped inside an \texttt{Ajax} call. After receiving the request from the view, the servlet handles the GUID (checks its existence) and forwards (\texttt{getUIModelsAfterAtomicDelta Propagation(changeData)}) the delta wrapped inside a \texttt{ChangeData} class to the adapter. After converting the delta into example specific data, adapter calls the appropriate method (\texttt{performAndPropagateSourceEdit(SrcData)}) and sends the delta to the bx tool i.e., eMoflon. Here I have described only the forward synchronization. However, the process for the backward synchronization goes analogously. The bx tool processes the delta taking into account all the associated transformation rules. During processing of the data, adapter checks if satisfiability of more than one transformation rule exists (\texttt{hasContinuation()}) for the processed data i.e., continuation. If continuation does not exist, processing is completed by the bx tool. Then the adapter requests (\texttt{getSourceModel(), getTargetModel()}) for the updated example specific models from the model, receives it, converts it to the UI specific data, and send it back to the servlet. After receiving the response, the servlet forwards it to the view for visualization. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Controller(cont-false)}.}
+	\item {\textbf{Delta Propagation (without continuation)}: After the synchronization button is pressed, view sends (\texttt{propagateChanges(GUID, delta)}) the delta created along with the GUID generated earlier for the user in the form of \texttt{JSON} data to the servlet wrapped inside an \texttt{Ajax} call. After receiving the request from the view, the servlet handles the GUID (checks its existence) and forwards (\texttt{getUIModelsAfterAtomicDelta Propagation(changeData)}) the delta wrapped inside a \texttt{ChangeData} class to the adapter. After converting the delta into example specific data, adapter calls the appropriate method (\texttt{performAndPropagateSourceEdit(SrcData)}) and sends the delta to the bx tool i.e., eMoflon. Here I have described only the forward synchronization. However, the process for the backward synchronization goes analogously. The bx tool processes the delta taking into account all the associated transformation rules. During processing of the data, adapter checks if satisfiability of more than one transformation rule exists (\texttt{hasContinuation()}) for the processed data i.e., continuation. If continuation does not exist, processing is completed by the bx tool. Then the adapter requests (\texttt{getSourceModel(), getTargetModel()}) for the updated example specific models from the model, receives it, converts it to the UI specific data, and sends it back to the servlet. After receiving the response, the servlet forwards it to the view for visualization. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Controller(cont-false)}.}
 	
-	\item {\textbf{Delta Propagation (with continuation)}: During processing of the data, If continuation (satisfiability of more than one transformation rule) exists, adapter requests for the matching rules (\texttt{getChoices()}) from the bx tool, i.e., eMoflon, converts them into the UI specific data, and send it back to the servlet. The servlet forwards it to the view for visualization. After getting the user's choice, view sends (\texttt{propagateUserChoice(GUID, userChoice)}) it along with the GUID generated earlier for the user in the form of \texttt{JSON} data to the servlet wrapped inside an \texttt{Ajax} call. After receiving the request from the view, the servlet handles the GUID (checks its existence) and forwards (\texttt{continueSynchronisation(userChoice)}) the user's choice to the adapter. The adapter forwards it to the bx tool for further processing. Then the adapter requests (\texttt{getSourceModel(), getTargetModel()}) for the updated example specific models from the model, receives it, converts it to the UI specific data, and send it back to the servlet. After receiving the response, the servlet forwards it to the view for visualization. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Controller(cont-true)}.}
+	\item {\textbf{Delta Propagation (with continuation)}: During processing of the data, If continuation (satisfiability of more than one transformation rule) exists, adapter requests for the matching rules (\texttt{getChoices()}) from the bx tool, i.e., eMoflon, converts them into the UI specific data, and send it back to the servlet. The servlet forwards it to the view for visualization. After getting the user's choice, view sends (\texttt{propagateUserChoice(GUID, userChoice)}) it along with the GUID generated earlier for the user in the form of \texttt{JSON} data to the servlet wrapped inside an \texttt{Ajax} call. After receiving the request from the view, the servlet handles the GUID (checks its existence) and forwards (\texttt{continueSynchronisation(userChoice)}) the user's choice to the adapter. The adapter forwards it to the bx tool for further processing. Then the adapter requests (\texttt{getSourceModel(), getTargetModel()}) for the updated example specific models from the model, receives it, converts it to the UI specific data, and sends it back to the servlet. After receiving the response, the servlet forwards it to the view for visualization. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Controller(cont-true)}.}
 \end{enumerate}
 
 For better understanding and to avoid complexity, here I have described the delta propagation process for only a single delta. However, the user can generate multiple deltas as well. In that case, after receiving all the deltas from the view, the controller converts them to example specific data. Then, the controller handles them atomically (one by one). Hence, the above described delta propagation process (with or without continuation) is executed for each delta until the data processing is complete by the bx tool.
