--- a/Final Documentation/Final-Documentation.tex
+++ b/Final Documentation/Final-Documentation.tex
@@ -147,10 +147,10 @@
 			\vspace{30pt}
 			\text{by} \\[4pt]
 			{\scshape\large Arjya Shankar Mishra}\\	
-			\vspace{50pt}
-			Supervisors:\\[2pt]
+			\vspace{60pt}
+			Supervisors:\\[4pt]
 			{\large Jun. Prof. Dr. Anthony Anjorin}\\
-			and\\
+			and\\[2pt]
 			{\large Prof. Dr. Gregor Engels}\\
 			\vspace{60pt}
 			{Paderborn, \today}
