--- a/Final Documentation/RelatedWork/RelatedWork.tex
+++ b/Final Documentation/RelatedWork/RelatedWork.tex
@@ -72,7 +72,7 @@ of time and requires technical expertise to set-up the framework and get the exa
 \subsubsection{Comparison}\label{subsubsubsec:comparison}
 Associated problems as discussed in Section \ref{subsubsec:relatedproblems} gave me the foundation while forming the requirements for my demonstrator. To overcome these problems, I took the shortcomings from each related work and designed the functional and non-functional requirements. 
 
-Based on the requirements described in chapter \ref{sec:requirements} and considering the problems as discussed in Section \ref{subsubsec:relatedproblems}, Table~\ref{tab:comparison_relatedwork} illustrates a comparison between all the related work discussed above with the demon-bx tool. "\checkmark" denotes the fulfillment of the requirement, "\ding{55}" denotes the non-fulfillment of the requirement, and "?" denotes insufficient information about the requirement. This comparison table clearly shows that the demon-bx tool overcomes all the problems associated with these related work.
+Based on the requirements described in chapter \ref{sec:requirements} and considering the problems as discussed in Section \ref{subsubsec:relatedproblems}, Table~\ref{tab:comparison_relatedwork} illustrates a comparison between all the related work discussed above with the demon-bx tool. "\checkmark" denotes the fulfillment of the requirement, "\ding{55}" denotes the non-fulfillment of the requirement, and "?" denotes insufficient information about the requirement. This comparison table clearly shows that the demon-bx tool overcomes the identified problems associated with these related work.
 
 \begin{sidewaystable}
 	\centering
